[gd_scene load_steps=18 format=2]

[ext_resource path="res://Environment/Explosive_barrel.png" type="Texture" id=1]
[ext_resource path="res://Helpers/Sprite_Handler.tscn" type="PackedScene" id=2]
[ext_resource path="res://Environment/Explosive_Barrel.gd" type="Script" id=3]
[ext_resource path="res://Environment/Fire_Particles.tscn" type="PackedScene" id=4]
[ext_resource path="res://Environment/Smoke Particles.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/Bombo/Windup.tres" type="Animation" id=6]
[ext_resource path="res://Environment/Barrel_shadow.png" type="Texture" id=7]
[ext_resource path="res://Environment/Pickup_Hitbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Environment/Explosive_Barrel_Windup.tres" type="Animation" id=9]
[ext_resource path="res://Helpers/Target_Point.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[sub_resource type="CircleShape2D" id=3]
radius = 24.0

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("../Fire_Particles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Smoke Particles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Explosion_Hitbox/Collision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Shadow:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("../Sprite_Handler")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "flash_off"
} ]
}
tracks/7/type = "value"
tracks/7/path = NodePath(".:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("..:z_index")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -10 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("..:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.72549 ) ]
}

[node name="Explosive_Barrel" type="KinematicBody2D" groups=["Cartable", "Explosion", "Explosive_Barrel", "Interactable"]]
modulate = Color( 1, 1, 1, 0.72549 )
position = Vector2( 4, 4 )
collision_mask = 0
script = ExtResource( 3 )

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="Target_Point" parent="." instance=ExtResource( 10 )]

[node name="Pickup_Hitbox" parent="." instance=ExtResource( 8 )]

[node name="Explosion_Hitbox" type="Area2D" parent="." groups=["Universal_Hitbox"]]
scale = Vector2( 0.875, 0.875 )
collision_mask = 0
monitoring = false

[node name="Collision" type="CollisionShape2D" parent="Explosion_Hitbox"]
shape = SubResource( 3 )
disabled = true

[node name="Sprite_Handler" parent="." instance=ExtResource( 2 )]

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )

[node name="Animation" type="AnimationPlayer" parent="Sprite"]
anims/Explode = SubResource( 7 )
anims/Explosive_Barrel_Windup = ExtResource( 9 )
anims/Windup = ExtResource( 6 )

[node name="Shadow" type="Sprite" parent="Sprite" groups=["No_Flash"]]
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 0, 8 )
z_index = -1
texture = ExtResource( 7 )

[node name="Fire_Particles" parent="." instance=ExtResource( 4 )]

[node name="Smoke Particles" parent="." instance=ExtResource( 5 )]

[connection signal="timeout" from="Pickup_Hitbox/Invincible_Wait" to="." method="_on_Invincible_Wait_timeout"]
[connection signal="animation_finished" from="Sprite/Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="animation_started" from="Sprite/Animation" to="." method="_on_Animation_animation_started"]

[editable path="Pickup_Hitbox"]
